--- a/install
+++ b/install
@@ -6,4 +6,5 @@ sudo apt-get update -y
 sudo apt-get install -y curl git software-properties-common ansible
 
 ## pull ansible
-sudo ansible-pull -U https://github.com/rdandnayak/ansible.git --ask-become-pass
+# sudo ansible-pull -U https://github.com/rdandnayak/ansible.git --ask-become-pass
+ansible-playbook local.yml --ask-become-pass
