--- a/install
+++ b/install
@@ -1,10 +1,19 @@
 #!/usr/bin/env bash
 
+
 ## Install ansible
-sudo apt-add-repository -y ppa:ansible/ansible
-sudo apt-get update -y
-sudo apt-get install -y curl git software-properties-common ansible
+if [[ $OSTYPE == 'darwin'* ]]; then
+	brew install ansible
+else
+	sudo apt-add-repository -y ppa:ansible/ansible
+	sudo apt-get update -y
+	sudo apt-get install -y curl git software-properties-common ansible
+fi
 
 ## pull ansible
 # sudo ansible-pull -U https://github.com/rdandnayak/ansible.git --ask-become-pass
-ansible-playbook local.yml --ask-become-pass
+if [[ $OSTYPE == 'darwin'* ]]; then
+	ansible-playbook local.yml --skip-tags ubuntu --ask-become-pass
+else
+	ansible-playbook local.yml --skip-tags macos --ask-become-pass
+fi
